--- a/src/libAPNs.Test.Unit/libAPNs.Test.Unit.csproj
+++ b/src/libAPNs.Test.Unit/libAPNs.Test.Unit.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeviceTokenTest.cs" />
+    <Compile Include="PayloadTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleNotificationTest.cs" />
   </ItemGroup>
